<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityNewOrder">

    <TextView android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_titulo"/>
    <TextView android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_correo"/>
    <EditText android:id="@+id/edtPedidoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_modo_entrega"/>
    <RadioGroup android:id="@+id/optPedidoModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/optPedidoRetiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pedido_modo_entrega_retira"/>
        <RadioButton android:id="@+id/optPedidoEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pedido_modo_entrega_envio"/>
    </RadioGroup>
    <TextView android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_direccion"/>
    <EditText android:id="@+id/edtPedidoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_hora_entrega"/>
    <EditText android:id="@+id/edtPedidoHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView android:id="@+id/lstPedidoItems"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/btnPedidoAgregarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pedido_lbl_agregar_producto"/>
        <Button android:id="@+id/btnPedidoQuitarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pedido_lbl_quitar_producto"/>
    </LinearLayout>
    <TextView android:id="@+id/lblTotalPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_total_pedido"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/btnPedidoHacerPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pedido_lbl_hacer_pedido"/>
        <Button android:id="@+id/btnPedidoVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pedido_lbl_volver"/>
    </LinearLayout>

</LinearLayout>