<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityHistory">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_lbl_titulo"/>

    <ListView android:id="@+id/lstHistorialPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/btnHistorialNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/historial_lbl_nuevo"/>
        <Button android:id="@+id/btnHistorialMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/historial_lbl_menu"/>
    </LinearLayout>

</LinearLayout>